Add arcane translation

--- a/deadlands/sheet/translations/fr.json
+++ b/deadlands/sheet/translations/fr.json
@@ -128,6 +128,9 @@
 	"money": "Argent",
 	"worstNightmare": "Pire Cauchemars",
 	"mental": "Mental",
-	"physique": "Physique"
-	
+	"physique": "Physique",
+	"Werewolf": "Garou",
+	"Huckster": "Huckster",
+	"Voodoo": "Vaudou",
+	"Martial arts": "Arts martiaux"
 }
